--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html dir="rtl" lang="ar">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -19,13 +19,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
       <link href="./src/assets/lib/animate/animate.min.css" rel="stylesheet">
-      <link href="./src/assets/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
       <link href="./src/assets/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 
       <!-- Customized Bootstrap Stylesheet -->
       <link href="./src/assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <link href="./src/assets/index.css" rel="stylesheet">
   </head>
   <body>
     <div class="container-xxl bg-white p-0">
@@ -38,7 +35,6 @@
 
     <script src="./src/assets/lib/easing/easing.min.js"></script>
     <script src="./src/assets/lib/waypoints/waypoints.min.js"></script>
-    <script src="./src/assets/lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="./src/assets/lib/isotope/isotope.pkgd.min.js"></script>
     <script src="./src/assets/lib/lightbox/js/lightbox.min.js"></script>
 
