--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html dir="rtl" lang="ar">
+<html dir="ltr" lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -25,9 +25,7 @@
       <link href="./src/assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container-xxl bg-white p-0">
-        <div id="root"></div>
-    </div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
